--- a/action.yml
+++ b/action.yml
@@ -1467,8 +1467,8 @@ inputs:
 
 # ====================================================================================
 # Action metadata
-name: Metrics embed
-author: lowlighter
+name: Self used Metrics
+author: linsyking
 description: An infographics generator with 40+ plugins and 300+ options to display stats about your GitHub account!
 branding:
   icon: user-check
